Change width of hints for mobile devices. Fix text-align for styled content.

--- a/src/css/640.less
+++ b/src/css/640.less
@@ -70,6 +70,7 @@
 
     .question-hint-container{
         padding-left: 0;
+        margin: 0;
     }
 }
 
