--- a/src/css/hint.less
+++ b/src/css/hint.less
@@ -3,6 +3,7 @@
 .question {
     .question-hint-container {
         padding: 10px 0 0 60px;
+        margin: 0 40px;
 
         .hint-button-container {
             text-align: center;
